# order_agent

./: .dockerignore  .env  .gitignore  Dockerfile.backend  Dockerfile.frontend  _ps2E08.tmp.htm  app.py  celery_worker.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
flaskproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
frontend/components/: ConfirmationMessage.tsx  FilterControls.tsx  FoodCard.tsx  FoodList.tsx  GroupOrderSetupForm.tsx  Header.tsx  LoadingSpinner.tsx  StarRating.tsx
frontend/services/: apiConfig.ts  geminiService.ts
graph/: conditional_edges.py  graph.py  nodes.py  prompt.py  state.py
graph/tools/: db_tools.py  email_tools.py  google_tools.py  line_tools.py  tools_definition.py
sql/models/: model.py
utils/: llm_config.py
